poi-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: poi
 labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrygbf8621.azurecr.io/poi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: kvVolume
          mountPath: /kvmnt
          readOnly: true
      volumes:
        - name: kvVolume
          flexVolume:
            driver: "azure/kv"
            secretRef:
              name: kvcreds
            options:
              keyvaultname: "TeamTwoKeyVault"
              keyvaultobjectnames: "SQL-DBNAME;SQL-PASSWORD;SQL-SERVER;SQL-USER"
              keyvaultobjectaliases: "SQL_DBNAME;SQL_PASSWORD;SQL_SERVER;SQL_USER"
              keyvaultobjecttypes: secret
              resourcegroup: "teamResources"
              subscriptionid: "df55c1eb-3581-4a61-82d7-df09e6cb666d"
              tenantid: "3e33f401-e915-4aea-853b-84dcbf846eec"
---
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  ports:
  - port: 80
  selector:
    app: poi
