trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrygbf8621.azurecr.io/trips
        ports:
        - containerPort: 80
        volumeMounts:
        - name: keyvault
          mountPath: /secrets
          readOnly: true
      volumes:
      - name: keyvault
        flexVolume:
          driver: "azure/kv"
          secretRef:
            name: kvcreds
          options:
            keyvaultname: "trips-kv"
            keyvaultobjectnames: "SQL-USER;SQL-PASSWORD;SQL-SERVER;SQL-DBNAME"
            keyvaultobjecttypes: "secret;secret;secret;secret"
            keyvaultobjectaliases: "SQL_USER;SQL_PASSWORD;SQL_SERVER;SQL_DBNAME"
            resourcegroup: "teamResources"
            subscriptionid: "df55c1eb-3581-4a61-82d7-df09e6cb666d"
            tenantid: "3e33f401-e915-4aea-853b-84dcbf846eec"
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api-dev
  labels:
    app: trips
spec:
  ports:
      - port: 80
  selector:
      app: trips
