userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-dev
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registrygbf8621.azurecr.io/userprofile
          ports:
            - containerPort: 80
          volumeMounts:
            - name: kvvolume
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: kvvolume
          flexVolume:
            driver: "azure/kv"
            secretRef:
              name: kvcreds
            options:
              keyvaultname: "TeamTwoKeyVault"
              keyvaultobjectnames: "SQL-DBNAME;SQL-PASSWORD;SQL-SERVER;SQL-USER"
              keyvaultobjectaliases: "SQL_DBNAME;SQL_PASSWORD;SQL_SERVER;SQL_USER"
              keyvaultobjecttypes: "secret;secret;secret;secret"
              resourcegroup: "teamResources"
              subscriptionid: "df55c1eb-3581-4a61-82d7-df09e6cb666d"
              tenantid: "3e33f401-e915-4aea-853b-84dcbf846eec"
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api-dev
  labels:
    app: userprofile
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
