ingress-web.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web-router
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /js/(.*)
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /css/(.*)
