ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api-router
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi(/|$)(.*)
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips(/|$)(.*)
      - backend:
          serviceName: user
          servicePort: 80
        path: /api/user(/|$)(.*)
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java(/|$)(.*)
